vbnc/vbnc/tests/Errors/32106-3.vb

Structure A
End Structure

Class B(Of T As Class)
    Function M() As b(Of TypeCode)
        Return Nothing
    End Function
End Class